chap-8/canary-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-canary-virtual-service
spec:
  hosts:
  - foo.default.svc.cluster.local
  http:
  - match:
    - headers:
       cookie:
          trusted-tester: "true"
    route:
    - destination:
        host: foo.default.svc.cluster.local
        subset: test
  - route:
    - destination:
        host: foo.default.svc.cluster.local
        subset: v1
