chap-8/egress-destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: google.com
spec:
  host: "*.google.com"
  trafficPolicy:
    tls:
      mode: SIMPLE
