chap-8/foo-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo-com-virtual-service
spec:
  hosts:
  - foo.com
  gateways:
  - foo-com-gateway
  http:
  - route:
    - destination:
        host: webserver.foo.svc.cluster.local
