chap-8/vs-examples.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: foo-default
spec:
 hosts:
 - foo.com
 gateways:
 - foo-gateway
 http:
 - route:
   - destination:
       host: foo.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: foo-default
spec:
 hosts:
 - foo.com
 - foo.super.secret.internal.name
 gateways:
 - foo-gateway
 http:
 - route:
   - destination:
       host: foo.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: foo-internal
spec:
 hosts:
 - foo.super.secret.internal.name
 gateways:
 - foo-gateway
 - wildcard-gateway
 http:
 - route:
   - destination:
       host: foo.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: foo-internal
spec:
 hosts:
 - foo.com
 gateways:
 - foo-gateway
 - wildcard-gateway
 http:
 - route:
   - destination:
       host: foo.default.svc.cluster.local
